--- a/SampleProgramSet3_SourceCode/project2/Makefile
+++ b/SampleProgramSet3_SourceCode/project2/Makefile
@@ -7,7 +7,7 @@ LOCAL_UTIL_LIBRARIES = ../lib/libcryph.so ../lib/libfont.so ../lib/libglsl.so ..
 GL_LIB_LOC = -L/usr/lib/nvidia-375
 GL_LIBRARIES = $(GL_LIB_LOC) -lglfw -lGLU -lGL
 
-OBJS = project2.o ModelView_Additions.o Block.o Table.o RubiksBlock.o Cylinder.o Chair.o
+OBJS = project2.o ModelView_Additions.o Block.o Table.o RubiksBlock.o Cylinder.o Chair.o RubiksCube.o
 
 project2: $(OBJS) $(LOCAL_UTIL_LIBRARIES)
 	$(LINK) -o project2 $(OBJS) $(LOCAL_UTIL_LIBRARIES) $(GL_LIBRARIES)
@@ -46,6 +46,9 @@ Cylinder.o: Cylinder.h Cylinder.c++
 
 Chair.o: Chair.h Chair.c++ Cylinder.h Cylinder.c++ Block.h Block.c++
 	$(CPP) $(C_FLAGS) Chair.c++ Cylinder.c++ Block.c++
+
+RubiksCube.o: RubiksCube.h RubiksCube.c++ RubiksBlock.h RubiksBlock.c++
+	$(CPP) $(C_FLAGS) RubiksCube.c++ RubiksBlock.c++
 
 clean:
 	rm *.o project2
