--- a/SampleProgramSet3_SourceCode/project3/Makefile
+++ b/SampleProgramSet3_SourceCode/project3/Makefile
@@ -7,7 +7,7 @@ LOCAL_UTIL_LIBRARIES = ../lib/libcryph.so ../lib/libfont.so ../lib/libglsl.so ..
 GL_LIB_LOC = -L/usr/lib/nvidia-375
 GL_LIBRARIES = $(GL_LIB_LOC) -lglfw -lGLU -lGL
 
-OBJS = project3.o Block.o Table.o Chair.o RubiksBlock.o ModelView_Additions.o PhongMaterial.o SceneElement.o
+OBJS = project3.o Block.o Table.o Chair.o RubiksBlock.o RubiksCube.o ModelView_Additions.o PhongMaterial.o SceneElement.o
 
 project3: $(OBJS) $(LOCAL_UTIL_LIBRARIES)
 	$(LINK) -o project3 $(OBJS) $(LOCAL_UTIL_LIBRARIES) $(GL_LIBRARIES)
@@ -43,5 +43,7 @@ Chair.o: Chair.h Chair.c++ Block.h Block.c++
 	$(CPP) $(C_FLAGS) Chair.c++ Block.c++
 RubiksBlock.o: RubiksBlock.h RubiksBlock.c++ Block.h Block.c++
 	$(CPP) $(C_FLAGS) RubiksBlock.c++ Block.c++
+RubiksCube.o: RubiksCube.h RubiksCube.c++ RubiksBlock.h RubiksBlock.c++
+	$(CPP) $(C_FLAGS) RubiksCube.c++ RubiksBlock.c++
 
 clean: rm *.o project3
